refactor(revocation): Add revocation stuff in its own module